# Skywalker

./: .gitignore  GEMINI.md  README.md  audit_report.json  debug_asset_client.py  debug_filestore_enums.py  debug_sql_client.py  fetch_metrics_demo.py  fleet.csv  fleet_dashboard.html  fleet_test.html  pyproject.toml  rc.html  test_export.json  ucr-ailab-maranda-report.html  ucr-ursa-major-beran-lab-report.html  ucr-ursa-major-chandrasegaran-report.html  ucr-ursa-major-curras-lab-report.html  ucr-ursa-major-gray-lab-report.html  ucr-ursa-major-rajivgupta-lab-report.html  ucr-ursa-major-rasmussen-lab-report.html  ucr-ursa-major-razak-lab-report.html  ucr-ursa-major-sridharan-lab-report.html  ursa_major_fleet_report.html  vm_utilization_report.html
.github/workflows/: test.yml
src/skywalker/: __init__.py  clients.py  core.py  logger.py  main.py  models.py  reporter.py  users.py  walker.py
src/skywalker/modes/: audit.py  fix.py  monitor.py  zombies.py
src/skywalker/schemas/: compute.py  filestore.py  gke.py  iam.py  network.py  run.py  sql.py  storage.py  vertex.py
src/skywalker/templates/: fleet_performance.html  report.html
src/skywalker/walkers/: asset.py  compute.py  filestore.py  gke.py  iam.py  monitoring.py  network.py  org.py  run.py  sql.py  storage.py  vertex.py
tests/: test_asset_walker.py  test_compute_walker.py  test_filestore_walker.py  test_fix_mode.py  test_gke_walker.py  test_iam_walker.py  test_monitoring_walker.py  test_network_walker.py  test_reporter.py  test_run_walker.py  test_sql_walker.py  test_storage_walker.py  test_vertex_walker.py  test_walker.py
